implements auth with frontend and auth/me